<resources>
    <string name="app_name">COEX_PARTNER</string>

    <!-- Authentication   -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="btnLogin">Login</string>
    <string name="txtRegister">I already have an account on COEX</string>
    <string name="txtLogin">I don\'t have an account on COEX?</string>
    <string name="used">FOR PARTNER</string>
    <string name="btnRegister">Register</string>
    <string name="cofirm_password">Confirm password</string>
    <string name="btnForgotPassword">Send email</string>

    <!-- Coo detail-->
    <string name="coo_name">Coo Yen Hoa</string>
    <string name="coo_address"><b>Address</b>: No. 1 Pham Van Bach, Yen Hoa, Cau Giay, Ha Noi.</string>
    <string name="about_space">About Space</string>
    <string name="simply_dummy">simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="out_of_service">Out of service</string>
    <string name="view_more">View more</string>
    <string name="detail_wifi">Free wifi</string>
    <string name="detail_conversion">Conversion call</string>
    <string name="detail_air">Air Conditioning</string>
    <string name="detail_drink">Drink</string>
    <string name="detail_printer">Printer</string>
    <string name="room_coo">Room of coo-working</string>
    <string name="add_room">Add new Room</string>
    <string name="shared_room">Shared room</string>
    <string name="max_person_room">Max 8 person</string>
    <string name="you_will">You will seating with other team in the big room</string>
    <string name="vnd_hour">200.000 vnd/hour/person</string>
    <string name="check_status_room">Check status room</string>

    <!-- Room detail   -->
    <string name="room_detail_txt">Room detail</string>
    <string name="edit_room">Edit room</string>

    <!-- Service detail   -->
    <string name="service">My service</string>

    <!-- Booking detail-->
    <string name="km">4km</string>
    <string name="style_room">Style room</string>
    <string name="see_dates">See dates</string>

    <!-- Add new coo-->
    <!--title-->
    <string name="add_new_coo">Add new cooworking</string>
    <string name="name_space">Name space *</string>
    <string name="address_new_coo">Address *</string>
    <string name="about_space_new">About space *</string>
    <string name="space_photo">Space photo (recommend size 16:9)</string>
    <!--text-->
    <string name="input_name_space">input name your space</string>
    <string name="input_address_new">input address of your space</string>
    <string name="input_about_new">something detail your space</string>
    <string name="input_picture">(recommend size 16:9)</string>
    <string name="other_service">Other service:</string>
    <string name="coffee">Coffee</string>
    <string name="beer">beer</string>
    <string name="sport">sport room</string>
    <string name="add_new">Add</string>
    <string name="add_more_style_room">Add more style room</string>
    <!--step-->
    <string name="step_1">Next step 2</string>
    <string name="step_2">Next step 3</string>
    <!--dec step-->
    <string name="d1">About space</string>
    <string name="d2">Service and style</string>
    <string name="d3">View</string>

    <!-- Booking -->
    <string name="booking">Booking</string>
    <string name="people">People</string>
    <string name="time_of_app">Time of appoitment</string>
    <string name="chose_the_time">Choose the time</string>
    <string name="duration">Duration</string>
    <string name="total_money">2.000.000 VND</string>
    <string name="total_amount">Total amount</string>

    <!-- Add new room or edit room -->
    <string name="titleAddRoom">New style room</string>
    <string name="about_room">About room</string>
    <string name="price_for_persion_hour">Price for person/hour</string>
    <string name="max_person">Max person</string>
    <string name="money">10.000.000 vnd</string>
    <string name="add_style">Create style room</string>
    <string name="add_room_main">Add room</string>
    <string name="my_room">My rooms</string>
</resources>
