<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:id="@+id/view">
        <ImageButton
            android:id="@+id/imgBackList"
            android:layout_width="@dimen/icon_h_w"
            android:layout_height="@dimen/icon_h_w"
            android:layout_marginStart="@dimen/marginStartContext"
            android:background="@drawable/ic_back"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/txtRoomDetail"
            android:text="@string/room_detail_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imgBackList"
            android:textAppearance="@style/coo_yen_hoa"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/titleSharedRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginDetailCoo2"
        android:textAppearance="@style/about_space"
        android:text="@string/shared_room"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/marginStartContext"
        android:layout_below="@id/view"/>

    <TextView
        android:id="@+id/editRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/titleSharedRoom"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/marginStartContext"
        android:text="@string/edit_room"
        android:textAppearance="@style/view_more" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtYouWill"
        android:text="@string/you_will"
        android:textAppearance="@style/simply_dumm"
        android:layout_below="@id/titleSharedRoom"
        android:layout_alignLeft="@id/titleSharedRoom"
        android:layout_marginTop="@dimen/marginCustomerRoom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCost"
        android:text="@string/vnd_hour"
        android:textAppearance="@style/textCost"
        android:layout_below="@id/txtYouWill"
        android:layout_alignLeft="@id/titleSharedRoom"
        android:layout_marginTop="@dimen/marginCustomerRoom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMaxPersonRoom"
        android:layout_toEndOf="@id/txtCost"
        android:textAppearance="@style/address_coo"
        android:text="@string/max_person_room"
        android:gravity="right"
        android:layout_alignRight="@id/editRoom"
        android:layout_alignTop="@id/txtCost"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorS"
        android:id="@+id/line"
        android:layout_below="@id/txtCost"
        android:layout_marginTop="@dimen/marginDetailCoo2"/>

    <TextView
        android:id="@+id/ourOfService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginDetailCoo2"
        android:textAppearance="@style/about_space"
        android:text="@string/out_of_service"
        android:layout_alignStart="@id/titleSharedRoom"
        android:layout_below="@id/line"/>

    <TextView
        android:id="@+id/view_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ourOfService"
        android:layout_alignRight="@id/editRoom"
        android:text="@string/view_more"
        android:textAppearance="@style/view_more"/>

    <ImageButton
        android:id="@+id/iconWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ourOfService"
        android:layout_alignLeft="@id/ourOfService"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/ic_wifi" />

    <ImageButton
        android:id="@+id/iconDrink"
        android:layout_width="@dimen/icon_h_w"
        android:layout_height="@dimen/icon_h_w"
        android:background="@drawable/ic_drink"
        android:layout_below="@id/iconWifi"
        android:layout_alignLeft="@id/iconWifi"
        android:layout_marginTop="@dimen/marginDetailCoo" />

    <TextView
        android:id="@+id/txtDetailWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iconWifi"
        android:layout_toRightOf="@id/iconWifi"
        android:textAppearance="@style/detail_icon"
        android:text="@string/detail_wifi"
        android:layout_marginStart="@dimen/icon"/>

    <TextView
        android:id="@+id/txtDetailDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iconDrink"
        android:layout_toRightOf="@id/iconDrink"
        android:textAppearance="@style/detail_icon"
        android:text="@string/detail_drink"
        android:layout_marginStart="@dimen/icon"/>

    <ImageButton
        android:id="@+id/iconConver"
        android:layout_width="@dimen/icon_h_w"
        android:layout_height="@dimen/icon_h_w"
        android:background="@drawable/ic_conversion_call"
        android:layout_toRightOf="@id/txtDetailWifi"
        android:layout_alignTop="@id/iconWifi"
        android:layout_marginStart="@dimen/marginIcon2"/>

    <ImageButton
        android:id="@+id/iconAirCond"
        android:layout_width="@dimen/icon_h_w"
        android:layout_height="@dimen/icon_h_w"
        android:background="@drawable/ic_air_conditioning"
        android:layout_below="@id/iconConver"
        android:layout_alignLeft="@id/iconConver"
        android:layout_alignTop="@id/iconDrink" />

    <TextView
        android:id="@+id/txtDetailConver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iconWifi"
        android:layout_toRightOf="@id/iconConver"
        android:textAppearance="@style/detail_icon"
        android:text="@string/detail_conversion"
        android:layout_marginStart="@dimen/icon"/>

    <TextView
        android:id="@+id/txtDetailAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iconDrink"
        android:layout_toRightOf="@id/iconAirCond"
        android:textAppearance="@style/detail_icon"
        android:text="@string/detail_air"
        android:layout_marginStart="@dimen/icon"/>

    <ImageButton
        android:id="@+id/iconPrinter"
        android:layout_width="@dimen/icon_h_w"
        android:layout_height="@dimen/icon_h_w"
        android:background="@drawable/ic_printer"
        android:layout_toLeftOf="@id/txtDetailPrinter"
        android:layout_alignTop="@id/iconWifi"
        android:layout_marginRight="@dimen/marginIcon"/>

    <TextView
        android:id="@+id/txtDetailPrinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iconWifi"
        android:textAppearance="@style/detail_icon"
        android:text="@string/detail_printer"
        android:layout_alignRight="@id/view_more"/>

    <ImageView
        android:id="@+id/line10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/iconDrink"
        android:layout_marginTop="20dp"
        android:background="@color/colorS" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/atePicker"
        android:layout_below="@id/line10"
        android:layout_marginTop="@dimen/marginDetailCoo2"
        android:layout_alignLeft="@id/titleSharedRoom"
        android:layout_alignRight="@id/editRoom"
        android:layout_marginStart="@dimen/marginIcon"
        android:calendarViewShown="false"/>
</RelativeLayout>