<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/blurbb">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginStartContext"
        android:layout_marginLeft="@dimen/marginStartContext"
        android:id="@+id/btnBack"
        android:fitsSystemWindows="true"
        android:background="@drawable/ic_back"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="222dp"
        android:layout_height="106dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/coex" />

    <TextView
        android:id="@+id/forpartner"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/used"
        android:layout_below="@id/logo"
        android:layout_marginEnd="@dimen/margin"
        android:textAppearance="@style/textForPartner"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:text="@string/email"
        android:layout_below="@id/logo"
        android:layout_marginTop="@dimen/marginTopLogo"
        android:layout_marginLeft="@dimen/marginStartContext"
        android:textAppearance="@style/textNormal"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/txtEmail"
        android:layout_alignLeft="@id/txtEmail"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="@dimen/marginStartContext"
        android:background="@drawable/edt_normal"
        android:backgroundTint="@color/colorWhile"
        android:inputType="textEmailAddress" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnForgotPassword"
        android:layout_below="@id/edtEmail"
        android:layout_alignLeft="@id/edtEmail"
        android:layout_alignRight="@id/edtEmail"
        android:text="@string/btnForgotPassword"
        android:layout_marginTop="@dimen/marginbtn"
        android:background="@drawable/button_normal"
        android:textStyle="bold"
        android:textColor="@color/colorWhile"/>



</RelativeLayout>